# clustertk

./: .flake8  .gitignore  .isort.cfg  ARCHITECTURE.md  CHANGELOG.md  CHECKLIST_v0.8.0.md  CLAUDE.md  FINAL_STEPS_v0.8.0.md  NEXT_SESSION.md  PUBLISH_NOW.sh  PUBLISH_v0.8.0.md  README.md  RELEASE_NOTES_v0.8.0.md  RELEASE_v0.7.0.md  TODO.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-viz.txt  requirements.txt  setup.py  test_comparison.py  test_hdbscan.py  test_infinity_fix.py
.github/: CONTRIBUTING.md
.github/workflows/: lint.yml  publish.yml  tests.yml
clustertk/: __init__.py  pipeline.py
clustertk/clustering/: __init__.py  base.py  dbscan.py  gmm.py  hdbscan.py  hierarchical.py  kmeans.py
clustertk/dimensionality/: __init__.py  manifold.py  pca.py
clustertk/evaluation/: __init__.py  metrics.py  optimal_k.py  stability.py
clustertk/feature_selection/: __init__.py  correlation.py  smart_correlation.py  variance.py
clustertk/interpretation/: __init__.py  feature_importance.py  naming.py  profiles.py
clustertk/preprocessing/: __init__.py  missing.py  multivariate_outliers.py  outliers.py  scaling.py  transforms.py
clustertk/visualization/: __init__.py  _utils.py  clusters.py  correlation.py  dimensionality.py  profiles.py
docs/: examples.md  faq.md  index.md  installation.md  quickstart.md
docs/user_guide/: README.md  clustering.md  dimensionality.md  evaluation.md  export.md  feature_selection.md  interpretation.md  preprocessing.md  visualization.md
examples/: basic_example.py  test_all_algorithms.py  test_naming.py  test_visualization.py
tests/: conftest.py  test_cluster_balance.py  test_multivariate_outliers.py  test_smart_correlation.py
tests/integration/: test_pipeline.py
tests/test_clustering/: test_kmeans.py
tests/test_evaluation/: test_metrics.py  test_stability.py
tests/test_interpretation/: __init__.py  test_feature_importance.py
tests/test_preprocessing/: test_missing.py  test_scaling.py
